# test-qt

./: .gitignore
cpponly/helloworld/: CMakeLists.txt  conanfile.txt
cpponly/helloworld/src/: main.cpp
cpponly/qres/: CMakeLists.txt
cpponly/qres/resources/: pngs.qrc
cpponly/qres/src/: main.cpp
helloworld/: CMakeLists.txt  conanfile.txt
helloworld/src/: main.cpp
modelview/: CMakeLists.txt
modelview/src/: main.cpp  simple_table_model.cpp  simple_table_model.h  string_list_model.cpp  string_list_model.h
qmlonly/: conanfile.txt
qmlonly/plotting/: lineseries.qml
quick/Test/: CMakeLists.txt
quick/build-Test-Qt_6_2_4_for_macOS-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
quick/build-Test-Qt_6_2_4_for_macOS-Debug/.qtc_clangd/: compile_commands.json
quick/qmlbook/: CMakeLists.txt
quick/qmlbook/src/: About.qml  (+28 more)
quick/qmlcpp/: CMakeLists.txt
quick/qmlcpp/.cache/clangd/index/: data_entry_model.cpp.F7AC19967CE9F469.idx  data_entry_model.h.165C08349A3AF56F.idx  main.cpp.7A35BDED05A4D76B.idx
quick/qmlcpp/src/: data_entry_model.cpp  main.cpp  main.qml  qml.qrc
quick/quickcells/: CMakeLists.txt  conanfile.txt
quick/test1/: CMakeLists.txt  conanfile.txt
singals_slots/counter/: CMakeLists.txt
singals_slots/lcdnumber/: CMakeLists.txt
widgets/Notepad-noui/: CMakeLists.txt
widgets/Notepad-withui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
widgets/build-Notepad-noui-Qt_6_2_4_for_macOS-Debug/: CMakeCache.txt
widgets/build-Notepad-withui-Qt_6_2_4_for_macOS-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
(+228 files in other folders)
